; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltRegisterExtModuleFunction.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltRegisterExtModuleFunction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xsltFunctionsHash = common dso_local global i32* null, align 8
@xsltExtMutex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xsltRegisterExtModuleFunction(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %16, label %10

10:                                               ; preds = %3
  %11 = load i32*, i32** %6, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %10
  %14 = load i32*, i32** %7, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %13, %10, %3
  store i32 -1, i32* %4, align 4
  br label %37

17:                                               ; preds = %13
  %18 = load i32*, i32** @xsltFunctionsHash, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = call i32* @xmlHashCreate(i32 10)
  store i32* %21, i32** @xsltFunctionsHash, align 8
  br label %22

22:                                               ; preds = %20, %17
  %23 = load i32*, i32** @xsltFunctionsHash, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %26

25:                                               ; preds = %22
  store i32 -1, i32* %4, align 4
  br label %37

26:                                               ; preds = %22
  %27 = load i32, i32* @xsltExtMutex, align 4
  %28 = call i32 @xmlMutexLock(i32 %27)
  %29 = load i32*, i32** @xsltFunctionsHash, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = call i32 @XML_CAST_FPTR(i32* %32)
  %34 = call i32 @xmlHashUpdateEntry2(i32* %29, i32* %30, i32* %31, i32 %33, i32* null)
  %35 = load i32, i32* @xsltExtMutex, align 4
  %36 = call i32 @xmlMutexUnlock(i32 %35)
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %26, %25, %16
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32* @xmlHashCreate(i32) #1

declare dso_local i32 @xmlMutexLock(i32) #1

declare dso_local i32 @xmlHashUpdateEntry2(i32*, i32*, i32*, i32, i32*) #1

declare dso_local i32 @XML_CAST_FPTR(i32*) #1

declare dso_local i32 @xmlMutexUnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
